[gd_scene load_steps=4 format=3 uid="uid://dxlcknrf0qy4g"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_ix2h5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kv766"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_e1w3g"]

[node name="Player" type="CharacterBody2D"]
modulate = Color(1, 0, 0, 1)
script = ExtResource("1_ix2h5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(3, 3)
shape = SubResource("RectangleShape2D_kv766")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-1.13249e-06, -1.13249e-06)
scale = Vector2(62, 60)
texture = SubResource("PlaceholderTexture2D_e1w3g")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Jump_Key" type="Label" parent="HUD/UI"]
layout_mode = 0
offset_left = 29.0
offset_top = 15.0
offset_right = 86.0
offset_bottom = 57.0
theme_override_font_sizes/font_size = 30
text = "Jump_Key"

[node name="Height" type="Label" parent="HUD/UI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1034.0
offset_top = -23.0
offset_right = 1091.0
offset_bottom = 19.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Height"
horizontal_alignment = 2

[node name="Stage" type="Label" parent="HUD/UI"]
layout_mode = 0
offset_left = 559.0
offset_top = 15.0
offset_right = 616.0
offset_bottom = 57.0
theme_override_font_sizes/font_size = 30
text = "Stage"

[node name="Panel" type="HBoxContainer" parent="HUD/UI"]
layout_mode = 0
offset_left = 983.0
offset_top = 75.0
offset_right = 1150.0
offset_bottom = 117.0

[node name="Min" type="Label" parent="HUD/UI/Panel"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "00:"
horizontal_alignment = 2

[node name="Sec" type="Label" parent="HUD/UI/Panel"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "00."
horizontal_alignment = 2

[node name="MiliSec" type="Label" parent="HUD/UI/Panel"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "000"
horizontal_alignment = 2

[node name="Insults" type="Label" parent="HUD/UI"]
layout_mode = 0
offset_left = 29.0
offset_top = 73.0
offset_right = 170.0
offset_bottom = 115.0
theme_override_font_sizes/font_size = 30

[node name="Control" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Jump" type="Button" parent="HUD/Control"]
layout_mode = 0
offset_left = 7.0
offset_top = 387.0
offset_right = 202.0
offset_bottom = 646.0
text = "Jump"

[node name="Left" type="Button" parent="HUD/Control"]
layout_mode = 0
offset_left = 954.0
offset_top = 387.0
offset_right = 1149.0
offset_bottom = 646.0
text = "Right
"

[node name="Right" type="Button" parent="HUD/Control"]
layout_mode = 0
offset_left = 752.0
offset_top = 389.0
offset_right = 947.0
offset_bottom = 648.0
text = "Left"

[connection signal="pressed" from="HUD/Control/Jump" to="." method="_on_jump_pressed"]
[connection signal="button_down" from="HUD/Control/Left" to="." method="_on_left_button_down"]
[connection signal="button_up" from="HUD/Control/Left" to="." method="_on_left_button_up"]
[connection signal="pressed" from="HUD/Control/Left" to="." method="_on_left_pressed"]
[connection signal="button_down" from="HUD/Control/Right" to="." method="_on_right_button_down"]
[connection signal="button_up" from="HUD/Control/Right" to="." method="_on_right_button_up"]
[connection signal="pressed" from="HUD/Control/Right" to="." method="_on_right_pressed"]
